# treebuild

./: .gitignore  README.md  meson.build
src/: arr_binary_tree.c  arr_binary_tree.h  arr_graph.c  arr_graph.h  avl_binary_tree.c  avl_binary_tree.h  binary_tree.c  binary_tree.h  circular_queue.c  circular_queue.h  common.c  common.h  forward_link.c  forward_link.h  hash.c  hash.h  hash_link.c  hash_link.h  max_heap.c  max_heap.h  queue.c  queue.h  stack.c  stack.h
tests/: abt_tree_test.c  append_test.c  arr_graph_test.c  binary_tree_test.c  circular_test.c  hash_link_test.c  max_heap_test.c
